--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/TouchUSD.loader.js";
       var config = {
-        dataUrl: buildUrl + "/TouchUSD.data.br",
-        frameworkUrl: buildUrl + "/TouchUSD.framework.js.br",
-        codeUrl: buildUrl + "/TouchUSD.wasm.br",
+        dataUrl: buildUrl + "/TouchUSD.data",
+        frameworkUrl: buildUrl + "/TouchUSD.framework.js",
+        codeUrl: buildUrl + "/TouchUSD.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "TouchUSD",
